adjust channel pages

--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -96,8 +96,11 @@
                     <a href="#"><i class="icon icon-th-list"></i> <span>频道管理</span></a>
                     <ul>
                         <li><a href='@controllers.admin.routes.Adverts.channel("index")'>首页频道管理</a></li>
+                        <li><a href='@controllers.admin.routes.Adverts.channel("freshLife")'>鲜生活频道管理</a></li>
                         <li><a href='@controllers.admin.routes.Adverts.channel("tejia")'>今天值得买管理</a></li>
                         <li><a href='@controllers.admin.routes.Adverts.channel("themes")'>主题频道管理</a></li>
+                        <li><a href='@controllers.admin.routes.Adverts.channel("sifangcai")'>私房菜频道管理</a></li>
+                        <li><a href='@controllers.admin.routes.Adverts.channel("sites")'>小镇频道管理</a></li>
                         <li><a href='@controllers.admin.routes.Adverts.channel("forum")'>讨论吧频道管理</a></li>
                         <li><a href='@controllers.admin.routes.Adverts.channel("checkIn")'>签到推荐管理</a></li>
 
