--- a/app/views/pages/cookbook.scala.html
+++ b/app/views/pages/cookbook.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User])
+@(user:Option[models.user.User],flashes:List[models.advert.Advert],shicai:List[models.site.Post],menu:List[models.site.Post])
 @views.html.template(
 user,
 nav="cookbook",
@@ -13,22 +13,14 @@ title =  "食美特，不一样的生活"
             <div class="scrollable">
 
                 <div class="items">
-                  <div class="item">
-                      <a><img width="685" height="250"></a>
-                  </div>
-                    <div class="item">
-                        <a><img width="685" height="250"></a>
-                    </div>
-                    <div class="item">
-                        <a><img width="685" height="250"></a>
-                    </div>
-                    <div class="item">
-                        <a><img width="685" height="250"></a>
-                    </div>
-                    <div class="item">
-                        <a><img width="685" height="250"></a>
-                    </div>
 
+                    @for(flash <- flashes) {
+                    <div class="item">
+                        <a href="@flash.link" title="@flash.title" target="_blank">
+                            <img src="@flash.pic" alt="@flash.title" width="685" height="250">
+                        </a>
+                    </div>
+                    }
 
                 </div>
 
@@ -85,163 +77,71 @@ title =  "食美特，不一样的生活"
             </ul>
         </div>
         <div class="switch-content clearfix">
+
          <div class="panel">
-             <div class="item ">
-                 <a href="/theme/18" title="红酒俏佳人" class="pic" target="_blank">
-                     <img width="150" height="150" src="http://img01.taobaocdn.com/bao/uploaded/i1/T1XY_KXXhgXXc5mswW_023006.jpg_210x210.jpg" alt="红酒俏佳人">
+             @for((item,i)<-shicai.drop(0).take(6).view.zipWithIndex ){
+             <div class="item @if((i+1)%2==0 ){last} ">
+                 <a href="@controllers.routes.Sites.post(item.id.get)" title="@item.title" class="pic" target="_blank">
+                     <img width="150" height="150" src="@item.pic" alt="@item.title">
                  </a>
              </div>
-             <div class="item ">
-                 <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
-                     <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
-                 </a>
-             </div>
-             <div class="item ">
-                 <a href="/theme/53" title="与美食约会" class="pic" target="_blank">
-                     <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/10592019991367205/T1gUxyXzNbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="与美食约会">
-                 </a>
+             }
 
-             </div>
-             <div class="item ">
-                 <a href="/theme/18" title="红酒俏佳人" class="pic" target="_blank">
-                     <img width="150" height="150" src="http://img01.taobaocdn.com/bao/uploaded/i1/T1XY_KXXhgXXc5mswW_023006.jpg_210x210.jpg" alt="红酒俏佳人">
-                 </a>
-             </div>
-             <div class="item ">
-                 <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
-                     <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
-                 </a>
-             </div>
-             <div class="item last">
-                 <a href="/theme/32" title="吃够粗粮，保护我们的“小心肝”" class="pic" target="_blank">
-                     <img  width="150" height="150" src="http://img02.taobaocdn.com/bao/uploaded/i2/T18QmwXb4fXXb1TOc2_044416.jpg_210x210.jpg" alt="吃够粗粮，保护我们的“小心肝”">
-                 </a>
-
-             </div>
          </div>
-            <div class="panel">
 
-                <div class="item ">
-                    <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
-                        <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
-                    </a>
-                </div>
-                <div class="item ">
-                    <a href="/theme/53" title="与美食约会" class="pic" target="_blank">
-                        <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/10592019991367205/T1gUxyXzNbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="与美食约会">
-                    </a>
 
-                </div>
-                <div class="item ">
-                    <a href="/theme/18" title="红酒俏佳人" class="pic" target="_blank">
-                        <img width="150" height="150" src="http://img01.taobaocdn.com/bao/uploaded/i1/T1XY_KXXhgXXc5mswW_023006.jpg_210x210.jpg" alt="红酒俏佳人">
-                    </a>
-                </div>
-                <div class="item ">
-                    <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
-                        <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
-                    </a>
-                </div>
-                <div class="item ">
-                    <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
-                        <img  width="150" height="150" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
-                    </a>
-                </div>
-                <div class="item last">
-                    <a href="/theme/32" title="吃够粗粮，保护我们的“小心肝”" class="pic" target="_blank">
-                        <img  width="150" height="150" src="http://img02.taobaocdn.com/bao/uploaded/i2/T18QmwXb4fXXb1TOc2_044416.jpg_210x210.jpg" alt="吃够粗粮，保护我们的“小心肝”">
-                    </a>
+         <div class="panel">
+             @for((item,i)<-shicai.drop(5).take(6).view.zipWithIndex ){
+             <div class="item @if((i+1)%2==0 ){last} ">
+                 <a href="@controllers.routes.Sites.post(item.id.get)" title="@item.title" class="pic" target="_blank">
+                     <img width="150" height="150" src="@item.pic" alt="@item.title">
+                 </a>
+             </div>
+             }
 
-                </div>
+
             </div>
+
         </div>
     </div>
 
     <!-- 食材主题推荐-->
     <div class="category clearfix">
         <div class="hd clearfix">
-            <h2 class="fl"><a href="#">应季私房菜</a></h2>
-            <a class="fr" href="#">更多&gt;&gt;</a>
+            <h2 class="fl"><a href="@controllers.routes.Pages.postList(0,1,1)">每周私房菜</a></h2>
+            <a class="fr" href="@controllers.routes.Pages.postList(0,1,1)">更多&gt;&gt;</a>
         </div>
         <div class="group clearfix">
-
-            <div class="item ">
+            @for((item,i)<-menu.view.zipWithIndex ){
+            <div class="item @if((i+1)%4==0){last} ">
                 <div class="pic">
-                    <a href="/theme/18" title="红酒俏佳人"  target="_blank">
-                        <img class="b-img" width="210" height="210" src="http://img01.taobaocdn.com/bao/uploaded/i1/T1XY_KXXhgXXc5mswW_023006.jpg_210x210.jpg" alt="红酒俏佳人">
+                    <a href="@controllers.routes.Sites.post(item.id.get)" title="@item.title"  target="_blank">
+                        <img class="b-img" width="210" height="210" src="@item.pic" alt="@item.title">
                     </a>
-                    <strong><span>美容 延缓衰老 </span> </strong>
+                    <strong><span>@item.tags </span> </strong>
                  </div>
 
                 <div class="num">
-                    <div class="view-num">1</div>
-                    <div class="reply-num">1</div>
+                    <div class="view-num">@item.viewNum</div>
+                    <div class="reply-num">@item.replyNum</div>
                     <div class="like-state">
-                        <a rel="followGoods" href="javascript:void(0)" data-pid="1">
+                        <a rel="followGoods" href="javascript:void(0)" data-pid="@item.id.get">
                             <i class="ico-likes" title="喜欢"></i>
                         </a>
                         <div class="like-num">
                             <dl class="J_scrollUp" style="top: 0px;">
-                                <dd class="J_FavorNum" data-val="1">1</dd>
+                                <dd class="J_FavorNum" data-val="@item.loveNum">@item.loveNum</dd>
                                 <dd>+1</dd>
                             </dl>
                         </div>
                     </div>
                 </div>
                 <h3 class="ofh">
-                    <a href="/theme/18" target="_blank">红酒俏佳人</a>
+                    <a href="@controllers.routes.Sites.post(item.id.get)" target="_blank">@item.title</a>
                 </h3>
             </div>
+              }
 
-            <div class="item ">
-                <a href="/theme/58" title="出游必备美食" class="pic" target="_blank">
-
-
-                    <img class="b-img" width="210" height="210" src="http://img04.taobaocdn.com/bao/uploaded/i4/11847021407123238/T1_FR8XuRbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="出游必备美食">
-
-
-
-
-                </a>
-                <h3 class="ofh">
-                    <a href="/theme/58" target="_blank">出游必备美食</a>
-                </h3>
-
-
-            </div>
-
-            <div class="item ">
-                <a href="/theme/53" title="与美食约会" class="pic" target="_blank">
-
-
-                    <img class="b-img" width="210" height="210" src="http://img04.taobaocdn.com/bao/uploaded/i4/10592019991367205/T1gUxyXzNbXXXXXXXX_!!0-item_pic.jpg_210x210.jpg" alt="与美食约会">
-
-
-
-
-                </a>
-                <h3 class="ofh">
-                    <a href="/theme/53" target="_blank">与美食约会</a>
-                </h3>
-
-
-            </div>
-
-            <div class="item last">
-                <a href="/theme/32" title="吃够粗粮，保护我们的“小心肝”" class="pic" target="_blank">
-
-
-                    <img class="b-img" width="210" height="210" src="http://img02.taobaocdn.com/bao/uploaded/i2/T18QmwXb4fXXb1TOc2_044416.jpg_210x210.jpg" alt="吃够粗粮，保护我们的“小心肝”">
-
-
-
-                </a>
-                <h3 class="ofh">
-                    <a href="/theme/32" target="_blank">吃够粗粮，保护我们的“小心肝”</a>
-                </h3>
-
-
-            </div>
 
         </div>
     </div>
