--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -23,33 +23,66 @@ nav="index"
 <!--main box start-->
 <div class="main-box clearfix">
 
-    <div class="flash fl" id="J_indexFlash">
-        <div class="scrollable">
-
-            <div class="items">
-
+    <!--<div class="ui-switchable fl" id="J_indexFlash">
+        <div class="ui-switchable-content">
                @for(flash <- flashes) {
-               <div class="item">
+               <div class="ui-switchable-panel">
                     <a href="@flash.link" title="@flash.title" target="_blank">
                         <img src="@flash.pic" alt="@flash.title" width="720" height="270">
                     </a>
                 </div>
                       }
-            </div>
+
 
 
         </div>
-        <ul class="navi clearfix">
-            <li class="active"></li>
+        <ul class="ui-switchable-nav clearfix">
+            @for((item,i)<-flashes.view.zipWithIndex ){
+            <li class="ui-switchable-trigger @if(i==4){last}">
+            <a href="@item.link">@item.title</a>
+            </li>
+            }
             <li class=""></li>
             <li class=""></li>
             <li class=""></li>
             <li class="last"></li>
         </ul>
-    </div>
-    <!--kissy switchable  slide end-->
-    <div class="bulletin fr clearfix">
+    </div>-->
+    <div class="flash fl" id="J_indexFlash">
+        <div class="scrollable">
 
+            <div class="items">
+
+                @for(flash <- flashes) {
+                <div class="item">
+                    <a href="@flash.link" title="@flash.title" target="_blank">
+                        <img src="@flash.pic" alt="@flash.title" width="720" height="270">
+                    </a>
+                </div>
+                }
+            </div>
+
+
+        </div>
+        <ul class="navi clearfix">
+            @for((flash,i)<-flashes.view.zipWithIndex){
+            <li @if(i==0){class="active"} @if(i==4){class="last"}>
+            <span></span>
+            <a href="@flash.link" title="@flash.link" target="_blank">
+                <div class="thumb">
+                    <img src="@flash.spic" alt="@flash.title" width="130" height="45">
+                </div>
+                <h3 class="topicTitle ofh">@flash.title</h3>
+            </a>
+            </li>
+            }
+
+        </ul>
+
+    </div>
+    <!-- switchable  slide end-->
+    <div class="bulletin fr clearfix">
+        <h3>最近热门的好玩意儿~</h3>
         <ul>
             @for(advert<-hots){
             <li class="ofh">
