adjust some style

--- a/app/views/pages/postList.scala.html
+++ b/app/views/pages/postList.scala.html
@@ -35,11 +35,11 @@ title =  "食美特，爱美食爱生活"
         <!--  switchable  slide end-->
         <div class="bulletin  fr clearfix">
             <div class="bulletin-tips">
-                <h3 class="mt15 mb10">用快乐的心情</h3>
-                <h3 class="mb15">收录生活的正能量</h3>
-                <p class="edit mb10">{ 我是主编 }</p>
-                <p><a class="create-theme" href="/theme/edit"> 创作主题</a> </p>
-                <p class="tips"> 优质主题，赠送食豆10粒哦 </p>
+                <h3 class="mt15 mb10">阳光、蓝天……</h3>
+                <h3 class="mb15">用汗水浇灌生活的乐土</h3>
+                <p class="edit mb10">{ 我是镇长 }</p>
+                <p><a class="create-theme" href="/site/edit"> 申请小镇</a> </p>
+                <p class="tips"> 优质小镇，赠送食豆100粒哦 </p>
             </div>
 
 
