--- a/app/views/pages/themeList.scala.html
+++ b/app/views/pages/themeList.scala.html
@@ -8,7 +8,7 @@ title = "美食街,特色馆_食美特，爱美食爱生活"
 <div class="container clearfix" id="themes">
     <div class="main-box clearfix">
 
-        <div class="flash fl">
+        <div class="flash fl" id="J_themeFlash">
             <div class="scrollable">
 
                 <div class="items">
