--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -53,7 +53,7 @@
 
                 <li><span>-</span></li>
                 <li class='presell @("on".when(nav == "presell"))  '><a href="/presell">鲜生活</a></li>
-                <li class='worth @("on".when(nav == "worth"))  '><a href="/worth">今天值得买</a></li>
+                <!--<li class='worth @("on".when(nav == "worth"))  '><a href="/worth">今天值得买</a></li>-->
 
                 <li><span>-</span></li>
                 <li class='@("on".when(nav == "themes"))'>  <a href="/themes" >主题</a> </li>
