--- a/app/views/sites/editSite.scala.html
+++ b/app/views/sites/editSite.scala.html
@@ -74,7 +74,7 @@ title =  "食美特，不一样的生活"
                 <div class="about">
                     <h5>关于小镇申请：</h5>
                     <div class="bd">
-                        小镇大镇长正在对你的小镇进行审核，审核周期为一个工作日。审核结果会通过想去网的私信，或者你留下的联系方式通知到你。希望能够带给你惊喜，请耐心等待。
+                        大镇长正在对你的小镇进行审核，审核周期为一个工作日。审核结果会通过想去网的私信，或者你留下的联系方式通知到你。希望能够带给你惊喜，请耐心等待。
                     </div>
                 </div>
             </div>
@@ -86,6 +86,10 @@ title =  "食美特，不一样的生活"
 
         }{
 <script type="text/javascript">
-    seajs.use('smeite/site/edit')
+    seajs.use(['$','smeite/site/edit'],function($,edit){
+        if(SMEITER.userId == ""){
+            $.smeite.dialog.isLogin();
+        }
+    })
 </script>
 }
