--- a/app/views/admin/sites/filterSites.scala.html
+++ b/app/views/admin/sites/filterSites.scala.html
@@ -82,8 +82,6 @@
                                 <div class="radio">
                                     结束时间：    <input type="date" class="date" format="yyyy-MM-dd"   name="endDate" value='@form("endDate").value' >
                                 </div>
-
-
                             </div>
                         </div>
                         <div class="control-group">
@@ -159,27 +157,19 @@
 
             @page.prev.map { page =>
             <li class="prev">
-                <a href="controllers.admin.routes.Sites.siteList(page)">Prev</a>
-            </li>
-            }.getOrElse {
-            <li class="prev disabled">
-                <a>Prev</a>
+                <span  data-page="@page">Prev</span>
             </li>
             }
             @for(num <-page.nums){
             @if(num==page.currentPage){
-            <li class="active"><a href="@controllers.admin.routes.Sites.siteList(num)">@num</a></li>
+            <li class="active"><span  data-page="@num">@num</span></li>
             }else {
-            <li><a href="@controllers.admin.routes.Sites.siteList(num)">@num</a></li>
+            <li><span data-page="@num">@num</span></li>
             }
             }
             @page.next.map { page =>
             <li class="next">
-                <a href="@controllers.admin.routes.Sites.siteList(page)">Next</a>
-            </li>
-            }.getOrElse {
-            <li class="next disabled">
-                <a>Next</a>
+                <span href="#" data-page="@page" >Next</span>
             </li>
             }
 
