--- a/app/views/admin/sites/siteList.scala.html
+++ b/app/views/admin/sites/siteList.scala.html
@@ -24,7 +24,7 @@
                 <h5>小镇筛选</h5>
             </div>
             <div class="widget-content nopadding">
-                <form class=" form-horizontal" id="J_filterForm"  method="get" action="@controllers.admin.routes.Sites.filterSites">
+                <form class=" form-horizontal" id="J_filterForm"  method="get" action="@controllers.admin.routes.Sites.filterPosts">
                     <input type="hidden" name="currentPage" id="J_currentPage" value="1">
 
                     <div class="control-group">
@@ -100,7 +100,7 @@
 
 <div class="row-fluid">
     <div class="well">
-        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchSites">
+        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchPosts">
             <input type="hidden" id="J_url" name="url" value="">
             <div class="controls">
                 <select id="J_select" name="action">
@@ -144,7 +144,7 @@
                     <td>
                        <!-- <a href="#"><i class="icon-edit"></i></a>-->
                         <!--    <a href="#J_deleteModal"class="remove" data-id="@item.id" role="button" data-toggle="modal"><i class="icon-trash"></i></a>  -->
-                        <a href=""><i class="icon-th-list"></i></a>
+                        <a href='@controllers.admin.routes.Sites.postList(item.id.get,1)'><i class="icon-th-list"></i></a>
                     </td>
                 </tr>
                 }
