--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -24,42 +24,27 @@ title =  "食美特，不一样的生活"
 
                </ul>
            </div>
+           <div class="join">
 
-
-
-
-       </div>
-       <div class="manager">
-          <div class="owner clearfix">
-              <h3>管理员</h3>
-              <ul>
-                  <li><a><img width="45" height="45" src="/images/user/default.jpg"></a></li>
-
-                  <li><a><img width="45" height="45" src="/images/user/default.jpg"></a></li>
-                  <li><a><img width="45" height="45" src="/images/user/default.jpg"></a></li>
-
-              </ul>
-          </div>
-
-           <div class="join clearfix">
-               <div class="love-num">已有1002居民</div>
                <div class="follow">
                    <a class="follow-btn"> + 加入小镇</a>
                    <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
+                   <span class="member-num">(1002居民)</span>
                </div>
+
                <div class="invite">
                    <a class="follow-btn"> 邀请好友</a>
                </div>
            </div>
-           <div id="bdshare" class="bdshare_t bds_tools get-codes-bdshare">
-               <span class="bds_more">分享到：</span>
-               <a class="bds_tsina"></a>
-               <a class="bds_qzone"></a>
-               <a class="bds_tqq"></a>
-               <a class="bds_renren"></a>
-               <a class="bds_mshare"></a>
-           </div>
 
+
+
+       </div>
+       <div class="notice">
+             <h3>小镇公告~</h3>
+             <div class="bd">
+                 @if(!site.notice.isEmpty){ @site.notice }else{ 小镇最近很清闲，还没有公告 }
+             </div>
 
        </div>
 
@@ -87,42 +72,42 @@ title =  "食美特，不一样的生活"
         </div>
     </div>
     <!-- site tools 包括 编辑 上传图片 上传视频-->
-   <!-- <div class="site-tools clearfix">
+    <div class="site-tools clearfix">
         <div class="site-baobei">
-            <a class="add add-baobei">
+            <a class="add add-baobei" href="javascript:void(0)" data-type="baobei">>
                 <ins class="ico-baobei"></ins>
                 <p>添加宝贝</p>
             </a>
         </div>
         <div class="site-pic">
-            <a class="add add-pic">
+            <a class="add add-pic" href="javascript:void(0)" data-type="pic">
                 <ins class="ico-pic"></ins>
                 <p>添加图片</p>
             </a>
         </div>
         <div class="site-video">
-            <a class="add add-video">
+            <a class="add add-video"href="javascript:void(0)" data-type="video">
                 <ins class="ico-video"></ins>
                 <p>添加视频</p>
             </a>
         </div>
         <div class="site-post last">
-            <a class="add add-post">
+            <a class="add add-post" href="javascript:void(0)" data-type="post">
                 <ins class="ico-post"></ins>
                 <p>添加帖子</p>
             </a>
         </div>
-    </div>-->
+    </div>
        <!-- site 帖子 -->
     <div class="site-posts">
         <div class="hd ">
             <div class="site-filter clearfix">
                 <div class="filter">
                     <h2>@site.title</h2>
-                    <a  href='@controllers.routes.Sites.site(sid,1,1)'  @if(s==1){class=" current"}><span>最新</span></a>
-                    <a   href='@controllers.routes.Sites.site(sid,2,1)'  @if(s==2){class=" current"}><span>最热</span></a>
+                    <a  href='@controllers.routes.Sites.site(sid,1,1)'  @if(s==1){class="current"}><span>最新</span></a>
+                    <a   href='@controllers.routes.Sites.site(sid,2,1)'  @if(s==2){class="current"}><span>最热</span></a>
                 </div>
-                <div class="edit"><a class="current" href='@controllers.routes.Sites.editPost(0,site.id.get)'> + 发帖</a></div>
+              <!--  <div class="edit"><a class="current" href='@controllers.routes.Sites.editPost(0,site.id.get)'> + 发帖</a></div>-->
                 <i></i>
             </div>
 
@@ -193,12 +178,7 @@ title =  "食美特，不一样的生活"
 </div>
 
         }{
-<script type="text/javascript">
-    seajs.use('app/init', function (init) {
 
-      init.load('app/site/site');
-    });
-</script>
 <script type="text/javascript">
     seajs.use(['$','smeite/site/favor','smeite/site/site'])
 </script>
