adjust site  post view

--- a/app/views/admin/sites/filterPosts.scala.html
+++ b/app/views/admin/sites/filterPosts.scala.html
@@ -103,7 +103,7 @@
 
 <div class="row-fluid">
     <div class="well">
-        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchSites">
+        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchPosts">
             <input type="hidden" id="J_url" name="url" value="">
             <div class="controls">
                 <select id="J_select" name="action">
