--- a/app/views/admin/sites/siteList.scala.html
+++ b/app/views/admin/sites/siteList.scala.html
@@ -100,7 +100,7 @@
 
 <div class="row-fluid">
     <div class="well">
-        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchPosts">
+        <form method="post" id="J_batchForm" action="@controllers.admin.routes.Sites.batchSites">
             <input type="hidden" id="J_url" name="url" value="">
             <div class="controls">
                 <select id="J_select" name="action">
