--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -27,14 +27,14 @@ title =  "食美特，不一样的生活"
            <div class="join">
 
                <div class="follow">
-                   <a class="follow-btn"> + 加入小镇</a>
+                   <a rel="followSite" href="javascript:;" class="follow-btn" data-sid="@site.id"> + 加入小镇</a>
                    <!-- <div class="followed-btn-big">已关注<span class="mr5 ml5">|</span><a rel="removefollow" data-followtype="5" data-usernick="duanyu200888" data-userid="3" href="javascript:;">取消</a></div>-->
-                   <span class="member-num">(<em>@site.memberNum</em>居民)</span>
+                   <span class="member-num">(<em id="J_siteMember">@site.memberNum</em>居民)</span>
                </div>
 
-               <div class="invite">
+               <!--<div class="invite">
                    <a class="follow-btn"> 邀请好友</a>
-               </div>
+               </div>-->
            </div>
 
 
@@ -173,7 +173,33 @@ title =  "食美特，不一样的生活"
         </div>
     </div>
 
+    <div class="site-share clearfix box-shadow">
+        <span class="site-tip">看完啦？别忘了关注一下~</span>
+        <a class="ifollow follow-theme" data-topicurl="amYRbi" href="javascript:;" title="关注">关注</a>
 
+
+        <div class="share fr">
+            <span class="fl l20">叫上好友一起来：</span>
+            <a class="s-sina"
+               href="javascript:void((function(){var title=encodeURIComponent('《 》－ 食美特，发现生活之美');var link=window.location.href;var pic='';window.open('http://service.t.sina.com.cn/share/share.php?appkey=1464940004&title='+title+'&pic='+pic+'&url='+link);})())"
+               alt="分享到新浪微博"></a>
+            <a class="s-qzone"
+               href="javascript:void((function(){var title=encodeURIComponent('《 》－ 食美特，发现生活之美');var link=window.location.href;window.open('http://sns.qzone.qq.com/cgi-bin/qzshare/cgi_qzshare_onekey?url='+link);})())"
+               alt="分享到QQ空间"></a>
+            <a class="s-tencent"
+               href="javascript:void((function(){var title=encodeURIComponent('《 》－ 食美特，发现生活之美');var link=window.location.href;var pic='';window.open('http://v.t.qq.com/share/share.php?appkey=100344510&url='+link+'&title='+title+'&pic=&site='+link);})())"
+               alt="分享到腾讯微博"></a>
+            <a class="s-douban"
+               href="javascript:void((function(){var title=encodeURIComponent('《 》－ 食美特，发现生活之美');var link=window.location.href;window.open('http://www.douban.com/recommend/?url='+link+'&title='+title);})())"
+               alt="分享到豆瓣"></a>
+            <a class="s-renren"
+               href="javascript:void((function(){var title=encodeURIComponent('《 》－ 食美特，发现生活之美');var link=window.location.href;window.open('http://share.renren.com/share/buttonshare.do?link='+link+'&title='+title);})())"
+               alt="分享到人人网"></a>
+            <a class="s-163"
+               href="javascript:void((function(){var title=encodeURIComponent('《 》－ 食美特，发现生活之美');var link=window.location.href;var pic='';window.open('http://t.163.com/article/user/checkLogin.do?link='+link+'&source=食美特&info='+title+link+'&images='+pic+'&togImg=true');})());"
+               alt="分享到网易微博"></a>
+        </div>
+    </div>
 
 </div>
 
