--- a/public/assets/css/template/site.css
+++ b/public/assets/css/template/site.css
@@ -105,11 +105,14 @@
     float: left;
 }
 
-.site-info .join .follow, .site-info .join .invite {
+.site-info .join .follow{
     float: left;
     text-align: center;
     margin-bottom: 10px;
     margin-right: 15px;
+}
+.site-info .join .member-num{
+    line-height: 24px;
 }
 .site-info .join .follow-btn{
     width: 80px;
@@ -171,6 +174,11 @@
     width:273px ;
     height: 258px;
     background: #fff;
+}
+.site-media .site-pic img{
+    width: 273px;
+    height: 258px;
+    overflow: hidden;
 }
 
 .site-media .site-video{
