--- a/app/views/pages/presell.scala.html
+++ b/app/views/pages/presell.scala.html
@@ -14,7 +14,7 @@ title =  "食美特，不一样的生活"
         <div class="goods-list">
             <!--单个商品 start-->
 
-            <div class="presell-item clearfix">
+            <!--<div class="presell-item clearfix">
                 <a href="/ugc/api/gotoTaobao/17430201068?goodsId=1282" target="_blank">
                     <img class="item-img" src="http://img04.taobaocdn.com/bao/uploaded/i4/19271021961947952/T1An4zXwdbXXXXXXXX_!!0-item_pic.jpg_310x310.jpg" alt="【爆款特卖】20年炒货经验 奶香壳杏仁巴旦木120g*2包 买2送礼物" width="300" height="300"></a>
                 <div class="item-info">
@@ -86,7 +86,7 @@ title =  "食美特，不一样的生活"
                     </div>
                 </div>
             </div>
-
+-->
             <!--单个商品 end-->
 
         </div>
