adjust site page

--- a/app/views/sites/site.scala.html
+++ b/app/views/sites/site.scala.html
@@ -50,8 +50,8 @@ title =  "食美特，不一样的生活"
 
    </div>
 
-    <!-- site media 包括 宝贝  图片 视频-->
-    <div class="site-media">
+    <!-- site media 包括 宝贝  图片 视频 暂不处理  -->
+    <!--<div class="site-media">
         <div class="site-baobei">
             <a class="add add-baobei">
             <ins class="ico-baobei"></ins>
@@ -81,9 +81,9 @@ title =  "食美特，不一样的生活"
             }
 
         </div>
-    </div>
-    <!-- site tools 包括 编辑 上传图片 上传视频-->
-    <div class="site-tools clearfix">
+    </div>-->
+    <!-- site tools 包括 编辑 上传图片 上传视频 暂不处理 -->
+    <!--<div class="site-tools clearfix">
         <div class="site-baobei">
             <a class="add add-baobei" href="javascript:void(0)" data-type="baobei">
                 <ins class="ico-baobei"></ins>
@@ -108,7 +108,7 @@ title =  "食美特，不一样的生活"
                 <p>添加帖子</p>
             </a>
         </div>
-    </div>
+    </div>-->
        <!-- site 帖子 -->
     <div class="site-posts">
         <div class="hd ">
