adjust lingshi to meishi

--- a/app/views/infos/help/siteMap.scala.html
+++ b/app/views/infos/help/siteMap.scala.html
@@ -16,9 +16,9 @@ title = "网站地图_食美特，爱美食爱生活"
         </div>
         <div class="site-nav">
             <h3>简约生活</h3>
-            <a href="/faxian/1">零食</a>
-            <a href="/faxian/2">食材</a>
-            <a href="/faxian/3">居家</a>
+            <a href="/faxian/0">美食</a>
+            <a href="/faxian/1">食材</a>
+            <a href="/faxian/2">居家</a>
         </div>
         <div class="site-nav">
             <h3>主题</h3>
