--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -35,7 +35,7 @@
 
                 </div>
 
-            </div>
+                cid</div>
         </div>
 
 
@@ -47,7 +47,7 @@
             <ul class="channel clearfix">
                 <li class=' @("on".when(nav == "index")) '><a href="/">首页</a></li>
                 <li><span>-</span></li>
-                <li class='@("on".when(nav == "零食"))'><a href='@controllers.routes.Pages.faxian(0,0,1,1)'>零食</a></li>
+                <li class='@("on".when(nav == "美食"))'><a href='@controllers.routes.Pages.faxian(0,0,1,1)'>美食</a></li>
                 <li class='@("on".when(nav == "食材"))'><a href='@controllers.routes.Pages.faxian(1,0,1,1)'>食材</a></li>
                 <li  class='@("on".when(nav == "居家"))'><a href='@controllers.routes.Pages.faxian(2,0,1,1)'>居家</a></li>
 
